The method getFirst() is not standard for Java List; use ret.get(0) to retrieve the first element instead.
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>